macros/tests/compile_fail/missing_return_type.stderr
error: melbi_fn_new functions must have an explicit return type
 --> tests/compile_fail/missing_return_type.rs:6:1
  |
6 | fn no_return_type(x: i64) {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
